[project]
name = "unified-copilot"
version = "1.0.0"
description = ""
authors = [
    {name = "GraphRAG team"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "streamlit==1.43.0",
    "azure-search-documents~=11.4",
    "azure-storage-blob~=12.20",
    "azure-identity~=1.16",
    "graphrag",
    "altair~=5.3",
    "streamlit-agraph~=0.0.45",
    "st-tabs~=0.1",
    "spacy~=3.8",
]

# Use the local workspace graphrag (v3, LiteLLM-based) so the app can read the
# v3 index produced by this repo. graphrag pulls in 7 sibling packages, all of
# which must be sourced locally since they aren't published at this version.
[tool.uv.sources]
graphrag = { path = "../packages/graphrag", editable = true }
graphrag-cache = { path = "../packages/graphrag-cache", editable = true }
graphrag-chunking = { path = "../packages/graphrag-chunking", editable = true }
graphrag-common = { path = "../packages/graphrag-common", editable = true }
graphrag-input = { path = "../packages/graphrag-input", editable = true }
graphrag-llm = { path = "../packages/graphrag-llm", editable = true }
graphrag-storage = { path = "../packages/graphrag-storage", editable = true }
graphrag-vectors = { path = "../packages/graphrag-vectors", editable = true }

[project.optional-dependencies]
dev = [
    "poethepoet~=0.26",
    "ipykernel~=6.29",
    "pyright~=1.1",
    "ruff~=0.8",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["images*"]

[tool.poe.tasks.start]
shell = "DATA_ROOT=\"$(pwd)/us_data\" streamlit run app/home_page.py"

[tool.poe.tasks.start_prod]
shell = "DATA_ROOT=\"$(pwd)/us_data\" streamlit run app/home_page.py --server.port=8501 --server.address=0.0.0.0"

[tool.pyright]
include = ["app"]
exclude = ["**/node_modules", "**/__pycache__"]
